--- a/pamoka5/uzduotis1.css
+++ b/pamoka5/uzduotis1.css
@@ -1,36 +1,54 @@
 * { 
     box-sizing:border-box;
 }
+
 div {
     border: 2px solid black;
     display: inline-block;
     vertical-align: top;
+    margin: auto;
 }
 
-.half-box {
-    width: 40%;
-    height: 150px;
-    margin: 4%;
+.box {
+    height: 160px;
+    margin: 2%;
+    text-align: center;
 }
 
-.top-bar{
+.nav-bar{
     width: 90%;
     height: 75px;
-    margin-left: 3%;
+    margin: 3%;
 }
 
-.bottom-bar{
+.inside-bar{
     width: 90%;
-    height: 75px;
-    margin-left: 3%;
-}
-
-.half-bar{
-    width: 90%;
-    height: 70px;
-    margin: 1%;
+    /* height: 70px; */
+    margin: 2%;
 }
 
 .no-border{
     border: 0px;
+}
+
+.h48 {
+    height: 48%;
+}
+
+.h28 {
+    height: 28%;
+}
+.w40 {
+    width: 40%;
+}
+.w25 {
+    width: 25%;
+}
+
+.w45 {
+    width: 45%;
+}
+
+.h90 {
+    height: 60%;
 }
