--- a/pamoka6/uzduotis5.css
+++ b/pamoka6/uzduotis5.css
@@ -2,12 +2,10 @@
 
 .container{
     display: flex;
-    width: 300px;
-    height: 200px;
     border-radius:3%;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+    margin: 15px;
 }
 .box{
     background-color: rgb(173, 185, 209);
