--- a/pamoka6/uzduotis6.css
+++ b/pamoka6/uzduotis6.css
@@ -3,27 +3,26 @@
 .container{
     display: flex;
     border:3px solid orange;
-    width: 500px;
-    height: 50px;
     border-radius:3%;
-    align-items: flex-start;    
 }
 
 .container2{
     display: flex;
     width: 500px;
     border-radius:3%;
-    align-items: flex-end;
-    flex-direction: column-reverse;
 }
-.box-left{
-    background-color: rgb(173, 185, 209);
+.box{
     padding: 12px;
     border-radius: 5px;
 }
 
-.box-right{
+.grow5{
+    flex-grow: 5;
+}
+.grow1{
+    flex-grow: 1;
+}
+
+.color-blue{
     background-color: rgb(173, 185, 209);
-    padding: 12px;
-    border-radius: 5px;
 }
