--- a/pamoka12/uzduotis3/index.css
+++ b/pamoka12/uzduotis3/index.css
@@ -1,15 +1,17 @@
 div {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .button {
-    background-color: grey;
-    border-radius: 3px;
-    padding: 5px;
-    width: 20%;
+    background-color: rgb(191, 216, 168);
+    font-size: 25px;
+    border-radius: 10px;
+    padding: 0.5rem;
+    min-width:20%;
     border: 1px solid black;
     text-decoration: none;
     color: black;
     text-align: center;
-    margin: 5px;
+    margin: 0.5rem;
 }
